doc/src/content/docs/en/0.5.x/api/basics/client.mdx
---
title: Client
description: The Client that manages connection and transmission to devices
sidebar:
  order: 2
slug: en/0.5.x/api/basics/client
---

import CodeTabs from "@components/CodeTabs.astro";
import Install from "@components/Install.astro";

`Client` is the central object that sends commands and reads state.
The basic and command APIs, including `Client`, are provided by the main package.
Connecting to real hardware and the like additionally requires a [Link](/autd3-sdk/en/0.5.x/api/link/).

<Install rust="autd3-rs" python="autd3" csharp="AUTD3" />

<CodeTabs rust={"Client::open(&geometry, link, option).await?;"} python={"await Client.open(geometry, link, option)"} csharp={"await Client.OpenAsync(geometry, link, option);"} />

| Parameter  | Type            | Description                    |
| ---------- | --------------- | ----------------------------- |
| `geometry` | `&Geometry`     | Physical layout of the devices |
| `link`     | `impl IntoLink` | Link                          |
| `config`   | `ClientConfig`  | See below                     |

To continuously monitor the operating state of the link, use `open_with_checker` and drive the returned `Checker` (see [Link State Monitoring](/autd3-sdk/en/0.5.x/guide/state-check/)).

## API

<CodeTabs rust={"let num_devices = client.num_devices();\n\nlet firmware = client.read_firmware_version().await?;\nlet fpga_state = client.read_fpga_state().await?;\nlet error_detail = client.read_error_detail().await?;\n\nlet datagram_builder = client.datagram_builder();\nlet resp = client.send(frame).await?.await?;\nclient.send_checked(frame).await?;\n\nclient.stop().await?;\nclient.close().await?;"} python={"num_devices = client.num_devices()\n\nfirmware = await client.read_firmware_version()\nfpga_state = await client.read_fpga_state()\nerror_detail = await client.read_error_detail()\n\ndatagram_builder = client.datagram_builder()\nresp = await (await client.send(frame))\nawait client.send_checked(frame)\n\nawait client.stop()\nawait client.close()"} csharp={"var numDevices = client.NumDevices;\n\nvar firmware = await client.ReadFirmwareVersionAsync();\nvar fpgaState = await client.ReadFpgaStateAsync();\nvar errorDetail = await client.ReadErrorDetailAsync();\n\nvar datagramBuilder = client.DatagramBuilder();\nvar resp = await await client.SendAsync(frame);\nawait client.SendCheckedAsync(frame);\n\nawait client.StopAsync();\nawait client.CloseAsync();"} />

| Method                    | async | Returns                               | Description                                                |
| ------------------------- | :---: | ------------------------------------- | ---------------------------------------------------------- |
| `num_devices()`           | —     | `usize`                               | Number of connected devices                                |
| `read_firmware_version()` | ✓     | `Result<Vec<FirmwareVersion>, Error>` | CPU/FPGA firmware version of each device                   |
| `read_fpga_state()`       | ✓     | `Result<Vec<FpgaState>, Error>`       | FPGA state of each device                                  |
| `read_error_detail()`     | ✓     | `Result<Vec<u8>, Error>`              | Error detail of each device                                |
| `datagram_builder()`      | —     | `DatagramBuilder`                     | [DatagramBuilder](/autd3-sdk/en/0.5.x/api/basics/datagram-builder/) |
| `send(frame)`             | ✓     | `Result<ResponseFuture, Error>`       | Enqueue a frame into the send queue. Awaiting the `ResponseFuture` yields the response (`Response`) |
| `send_checked(frame)`     | ✓     | `Result<(), Error>`                   | Send and confirm the response                              |
| `stop()`                  | ✓     | `Result<(), Error>`                   | Stop all transducers                                       |
| `close()`                 | ✓     | `Result<(), Error>`                   | Close the connection                                       |

## ClientConfig

<CodeTabs rust={"ClientConfig {\n    timeout_cycles: 10,\n    max_inflight: NonZeroUsize::new(MAX_INFLIGHT).unwrap(),\n    max_resync_rounds: NonZeroU32::new(8).unwrap(),\n    low_latency: false,\n    reset_resend_cycles: NonZeroU32::new(2).unwrap(),\n    rt_priority: Some(ThreadPriority::Crossplatform(\n        ThreadPriorityValue::try_from(80).unwrap(),\n    )),\n    rt_policy: RtSchedulePolicy::Fifo,\n    rt_affinity: None,\n    validate_state: true,\n}"} python={"ClientConfig(\n    timeout_cycles=10,\n    max_inflight=MAX_INFLIGHT,\n    max_resync_rounds=8,\n    low_latency=False,\n    reset_resend_cycles=2,\n    rt_priority=80,\n    disable_rt_priority=False,\n    rt_affinity=None,\n    validate_state=True,\n)"} csharp={"new ClientConfig(\n    timeoutCycles: 10,\n    maxInflight: (uint)Client.MaxInflight,\n    maxResyncRounds: 8,\n    lowLatency: false,\n    resetResendCycles: 2,\n    rtPriority: 80,\n    disableRtPriority: false,\n    rtAffinity: null,\n    validateState: true\n)"} />

| Field                  | Type                     | Default | Description                                                |
| ---------------------- | ------------------------ | ------- | ---------------------------------------------------------- |
| `timeout_cycles`       | `u32`                    | `10`    | Response-wait timeout (in send cycles)                     |
| `max_inflight`         | `NonZeroUsize`           | `127`   | Send queue size                                            |
| `max_resync_rounds`    | `NonZeroU32`             | `8`     | Maximum number of rounds to attempt resynchronization      |
| `low_latency`          | `bool`                   | `false` | Low-latency mode                                           |
| `reset_resend_cycles`  | `NonZeroU32`             | `2`     | Number of cycles to send a reset command                   |
| `rt_priority`          | `Option<ThreadPriority>` | Windows: `TimeCritical` / otherwise: `80` | Priority of the RT thread. Setting `None` leaves the OS default. |
| `rt_policy`            | `RtSchedulePolicy`       | `Fifo`  | Scheduling policy used when `rt_priority` is set: `Normal`, `Fifo` (`SCHED_FIFO`), `RoundRobin` (`SCHED_RR`) |
| `rt_affinity`          | `Option<CoreId>`         | `None`  | CPU core affinity of the RT thread (OS default if `None`)  |
| `validate_state`       | `bool`                   | `true`  | Enable pre-send validation                                 |

`max_inflight` errors if it exceeds `MAX_INFLIGHT (127)`.

Enabling `low_latency` bypasses the receive buffer inside the firmware, improving latency.
However, this may make operation unstable.
